--- a/tutorial_TeX/RB_Intro_Tutorial/RB_Intro_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Intro_Tutorial/RB_Intro_Tutorial_content.tex
@@ -31,7 +31,7 @@ This should launch \RevBayes and give you a command prompt (the \texttt{>} chara
 This means \RevBayes is waiting for input.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth]{figures/terminal.pdf}
+	\includegraphics[width=\linewidth]{\ResourcePath figures/terminal.pdf}
 \end{figure}
 
 \subsection{Operators and Functions}
@@ -51,7 +51,7 @@ Entering each of the following lines will automatically execute these operations
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth]{figures/revbayes_operations.pdf}
+	\includegraphics[width=\linewidth]{\ResourcePath figures/revbayes_operations.pdf}
 \end{figure}
 \noindent From now on, we will omit images of the terminal.
 
