--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -64,13 +64,14 @@ John P.~Huelsenbeck
 
 \part{Getting Started with \RevBayes}
 
-\chapter{Introduction}
+\chapter{A (very short) general Introduction}
 \def \ResourcePath {RB_Getting_Started/}
 \include{RB_Getting_Started/RB_Getting_Started_content}
 
 \chapter{Introduction to \RevBayes and \Rev}
 \def \ResourcePath {RB_Intro_Tutorial/}
 \include{RB_Intro_Tutorial/RB_Intro_Tutorial_content}
+\include{RB_Intro_Tutorial/RB_Intro_Tutorial_exercises}
 
 \chapter{General Syntax of \Rev}
 \def \ResourcePath {RB_Rev_Tutorial/}
@@ -82,7 +83,7 @@ John P.~Huelsenbeck
 
 
 
-\part{Inference}
+\part{Bayesian Inference and MCMC Simulation}
 
 \chapter{Introduction to Markov chain Monte Carlo Algorithms using an Archery Example}
 \def \ResourcePath {RB_MCMC_Archery_Tutorial/}
@@ -91,18 +92,11 @@ John P.~Huelsenbeck
 \chapter{Introduction to Markov chain Monte Carlo Algorithms using a Coin-Flip Example}
 \def \ResourcePath {RB_MCMC_Binomial_Tutorial/}
 \include{RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial_content}
+\include{RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial_exercises}
 
 %\chapter{More on Markov chain Monte Carlo Algorithms}
 %\def \ResourcePath {RB_MCMC_Tutorial/}
 %\include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
-
-
-\part{Basic Phylogeny Estimation}
-
-\chapter{Continuous Time Markov Model for Discrete Character Evolution}
-\def \ResourcePath {RB_CTMC_Tutorial/}
-\include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
-
 
 \part{Model Selection, Model Averaging, and Model Testing}
 
@@ -110,8 +104,17 @@ John P.~Huelsenbeck
 \def \ResourcePath {RB_BayesFactor_Tutorial/}
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
+\chapter{Model Fit and Posterior Predictive Simulation}
+\def \ResourcePath {RB_BayesFactor_Tutorial/}
+\include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
-\part{More on Substitution Models}
+
+
+\part{Basic Phylogeny Estimation}
+
+\chapter{Continuous Time Markov Model for Discrete Character Evolution}
+\def \ResourcePath {RB_CTMC_Tutorial/}
+\include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
 \chapter{Partitioned Data Analysis}
 \def \ResourcePath {RB_Partition_Tutorial/}
@@ -208,6 +211,17 @@ John P.~Huelsenbeck
 \include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content}
 \include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_4_content}
 
+
+
+\part{Discrete Morphology}
+\chapter{Discrete Morphology}
+\def \ResourcePath {RB_Discrete_Morphology_Tutorial/}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_0_content}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_2_content}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_3_content}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_4_content}
+\include{RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_results_content}
 
 
 \part{Phylogenetic Comparative Method}
