--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9925,4 +9925,86 @@ They used a simple NNI for rooted trees},
   year={2017}
 }
 
+@Article{Phillips06,
+  author  = {Aloysius J. Phillips},
+  title   = {Homology assessment and molecular sequence alignment},
+  journal = {Journal of Biomedical Informatics},
+  year    = {2006},
+  volume  = {39},
+  number  = {1},
+  pages   = {18 - 33},
+  issn    = {1532-0464},
+  note    = {Phylogenetic Inferencing: Beyond Biology},
+}
+
+@Article{freudenstein05,
+  author  = {Freudenstein, John V.},
+  title   = {Characters, States and Homology},
+  journal = {Systematic Biology},
+  year    = {2005},
+  volume  = {54},
+  number  = {6},
+  pages   = {965},
+}
+
+@Article{Wright2014,
+  author    = {Wright, April M and Hillis, David M},
+  title     = {Bayesian analysis using a simple likelihood model outperforms parsimony for estimation of phylogeny from discrete morphological data},
+  journal   = {PLoS One},
+  year      = {2014},
+  volume    = {9},
+  number    = {10},
+  pages     = {e109210},
+  publisher = {Public Library of Science},
+}
+
+@Article{allman08b,
+  author  = {E. S. Allman and J. A. Rhodes},
+  title   = {Identifying evolutionary trees and substitution parameters for the general {M}arkov model with invariable sites},
+  journal = {Mathematical Biosciences},
+  year    = {2008},
+  volume  = {211},
+  pages   = {18--33},
+}
+
+@Article{Tuffley1998,
+  author  = {C. Tuffley and M. Steel},
+  title   = {Modeling the covarion hypothesis of nucleotide substitution},
+  journal = {Mathematical Biosciences},
+  year    = {1998},
+  volume  = {147},
+  pages   = {63--91},
+}
+
+@Article{Beaulieu2013,
+  author    = {Beaulieu, Jeremy M and O'Meara, Brian C and Donoghue, Michael J},
+  title     = {Identifying hidden rate changes in the evolution of a binary morphological character: the evolution of plant habit in campanulid angiosperms},
+  journal   = SYSBIO,
+  year      = {2013},
+  volume    = {62},
+  number    = {5},
+  pages     = {725--737},
+  publisher = {Oxford University Press},
+}
+
+@Article{Pagel1994,
+  author    = {Pagel, Mark},
+  title     = {Detecting correlated evolution on phylogenies: a general method for the comparative analysis of discrete characters},
+  journal   = {Proceedings of the Royal Society of London B: Biological Sciences},
+  year      = {1994},
+  volume    = {255},
+  number    = {1342},
+  pages     = {37--45},
+  publisher = {The Royal Society},
+}
+
+@Article{Lartillot2004,
+  author  = {N. Lartillot and H. Philippe},
+  title   = {A {B}ayesian mixture model for across-site heterogeneities in the amino-acid replacement process},
+  journal = {Molecular Biology and Evolution},
+  year    = {2004},
+  volume  = {21},
+  pages   = {1095--1109},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
