--- a/tutorial_TeX/RB_DiscreteMorphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
+++ b/tutorial_TeX/RB_DiscreteMorphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
@@ -18,14 +18,12 @@
 \end{center}
 
 \def \ResourcePath {./}
-\def \GlobalResourcePath {./}
+\def \GlobalResourcePath {../}
 \input{RB_DiscreteMorphology_Tutorial_0_content}
 \input{RB_DiscreteMorphology_Tutorial_1_content}
-\input{RB_DiscreteMorphology_Tutorial_2_content}
+%\input{RB_DiscreteMorphology_Tutorial_2_content}
 \input{RB_DiscreteMorphology_Tutorial_3_content}
 \input{RB_DiscreteMorphology_Tutorial_results_content}
-
-\bibliography{\GlobalResourcePath bayes}
 
 Version dated: \today
 
