--- a/tutorial_TeX/RB_DiscreteMorphology_Tutorial/RB_DiscreteMorphology_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_DiscreteMorphology_Tutorial/RB_DiscreteMorphology_Tutorial_0_content.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-While molecular data have become the default for building phylogenetic trees for many types of evolutionary analysis, morphological data remains important, particularly for analyses involving fossils. The use of morphological data  raises special considerations for model-based methods for phylogenetic inference. Morphological data are typically collected to maximize the number of parsimony-informative characters -  that is, the characters that provide information in favor of one topology over another.  Morphological characters also do not carry common meanings from one character in a matrix to the next; character codings are made arbitrarily. These two factors require extensions to our existing phylogenetic models. Accounting for the complexity of morphological characters remains challenging. This tutorial will provide a discussion of modeling morphological characters, and will demonstrate how to perform Bayesian phylogenetic analysis with morphology using \RevBayes \citep{Hoehna2016b}. 
+While molecular data have become the default for building phylogenetic trees for many types of evolutionary analysis, morphological data remains important, particularly for analyses involving fossils. The use of morphological data  raises special considerations for model-based methods for phylogenetic inference. Morphological data are typically collected to maximize the number of parsimony-informative characters -  that is, the characters that favor one topology over another.  Morphological characters also do not carry common meanings from one character in a matrix to the next; character codings are made arbitrarily. These two factors require extensions to our existing phylogenetic models. Accounting for the complexity of morphological characters remains challenging. This tutorial will provide a discussion of modeling morphological characters, and will demonstrate how to perform Bayesian phylogenetic analysis with morphology using \RevBayes. 
 
 \subsection{Contents}
 
@@ -9,7 +9,7 @@ The Discrete Morphology guide contains several tutorials
 \begin{itemize}
 \item Section \ref{sec:dm_overview}: Overview of the Discrete Morphological models
 \item Section \ref{sec:dm_simple}: A simple discrete morphology analysis
-%\item Section \ref{sec:dm_matrix}: Custom Q-Matrices
+\item Section \ref{sec:dm_matrix}: Custom Q-Matrices
 \item Section \ref{sec:dm_disc}: A model for allowing state frequency variation across binary characters
 \item Section \ref{sec:dm_dir}: A model for allowing state frequency variation across binary and multistate characters
 \item Section \ref{sec:trace}: Evaluating the MCMC \end{itemize}
