--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/figures/tikz/full_model_modular.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/figures/tikz/full_model_modular.tex
@@ -1,22 +1,85 @@
-\begin{tikzpicture}
-\node[obmod] (a) at (0,0) {\large Molecular Data};
-\node[smod] (rm) at ($(a)+(-4.5,1.35)$) {\large Substitution Model};
-\node[smod] (sr) at ($(a)+(-4,0)$) {\large Site Rate Model};
-\node[smod] (br) at ($(a)+(-4.5,-1.35)$) {\large Branch Rate Model};
-\draw[taro] (rm) -> (a);
-\draw[taro] (sr) -> (a);
-\draw[taro] (br) -> (a);
-\node[obmod] (c) at (8,0) {\large Morphological Data};
-\node[smod] (crm) at ($(c)+(5,1.35)$) {\large Substitution Model};
-\node[smod] (csr) at ($(c)+(4.5,0)$) {\large Site Rate Model};
-\node[smod] (cbr) at ($(c)+(5,-1.35)$) {\large Branch Rate Model};
-\draw[taro] (crm) -> (c);
-\draw[taro] (csr) -> (c);
-\draw[taro] (cbr) -> (c);
-\node (mid) at ($(a)!0.5!(c)$) { };
-\node[smod] (tree) at ($(mid)+(0,3)$) {\large Time Tree Model};
-\draw[taro] (tree) edge[bend left=-35] (a);
-\draw[taro] (tree) edge[bend right=-35] (c);
-\node[obmod] (f) at ($(tree)+(0,-5)$) {\large Fossil Occurrence Time Data};
-\draw[taro] (tree) -- (f);
-\end{tikzpicture}
+% preamble
+
+\documentclass[10pt]{article}
+\usepackage[paperwidth=40in, paperheight=40in]{geometry}
+\usepackage[usenames]{color} %used for font color
+\usepackage{amssymb} %maths
+\usepackage{amsmath} %maths
+\usepackage[utf8]{inputenc} %useful to type directly diacritic characters
+
+%%% Sans serif text font
+\usepackage[scaled]{helvet}
+\renewcommand*\familydefault{\sfdefault}\usepackage[T1]{fontenc}
+%%%
+
+\usepackage{skull}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usetikzlibrary{arrows}
+\usetikzlibrary{fit}
+\usetikzlibrary{calc}
+\usetikzlibrary{automata}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{decorations.pathreplacing}
+
+\tikzset{>=latex}
+\tikzstyle{snode}=[black,draw=black,line width=1.5pt,shape=circle,fill=white,minimum size=8mm]
+\tikzstyle{obnode}=[black,draw=black,line width=1.5pt,shape=circle,fill=black!20!white,minimum size=8mm]
+\tikzstyle{detnode}=[black,draw=black,line width=1.5pt,densely dotted,shape=circle,fill=white,minimum size=8mm]
+\tikzstyle{constnode}=[black,draw=black,line width=1.5pt,shape=rectangle,fill=white,minimum size=8mm]
+\tikzstyle{mincnode}=[black,draw=black,line width=0.75pt,shape=rectangle,fill=white,minimum size=3mm]
+\tikzstyle{blnode}=[white,draw=black,line width=1pt,shape=circle,fill=black,minimum size=1mm,font=\scriptsize,inner sep=1pt]
+\tikzstyle{ylnode}=[black,draw=black,line width=1pt,shape=circle,fill=yellow,minimum size=1mm,font=\scriptsize,inner sep=1pt]
+\tikzstyle{taro}=[->,line width=2pt,color=black]
+\tikzstyle{thintaro}=[->,line width=0.75pt,color=black]
+\tikzstyle{dtaro}=[->,line width=2pt, densely dotted,color=black]
+\tikzstyle{smod}=[black, draw=black, line width=2pt, fill=white, shape=rectangle, rounded corners, minimum size=10mm, minimum width=20mm]
+\tikzstyle{obmod}=[black, draw=black, line width=2pt, fill=black!20!white, shape=rectangle, rounded corners, minimum size=10mm, minimum width=20mm, minimum width=20mm]
+
+\definecolor{shc}{RGB}{238,224,229}
+\definecolor{shc2}{RGB}{182,152,195}
+\definecolor{brnt}{RGB}{221,132,13}
+
+\begin{document}
+\[\begin{tikzpicture}
+\node[obnode] (x) at (-5,1) {$seq$};
+\node (x_dist) at ($(x)+(0.8,-0.7)$) {PhyloCTMC};
+\draw (x) -- (x_dist) ;
+\node[constnode] (Q) at ($(x)+(2,2)$) {\Large $Q$};
+\node (Q_dist) at ($(Q)+(0.8,-0.7)$) {JC};
+\draw (Q) -- (Q_dist) ;
+\node[detnode] (psi) at ($(x)+(-2,2)$) {\Large $\Psi$};
+\node (psi_dist) at ($(psi)+(-0.8,-0.7)$) {Tree};
+\draw (psi) -- (psi_dist);
+\node[snode] (bl) at ($(psi)+(-1.0,2.0)$) {\Large $bl_i$};
+\node[snode] (tau) at ($(psi)+(1,2.0)$) {\LARGE $\tau$};
+\node (bl_dist) at ($(bl)+(-1.2,0.7)$) {Exponential};
+\node (tau_dist) at ($(tau)+(1.0,0.7)$) {Uniform};
+\draw (bl) -- (bl_dist);
+\draw (tau) -- (tau_dist);
+\node[constnode] (rate_bl) at ($(bl)+(0,1.5)$) {\Large $10$};
+\node[constnode] (N) at ($(tau)+(0,1.5)$) {\Large $N$};
+\node[rectangle,dashed, thick, inner sep=4mm, draw=black!100, fit = (rate_bl) (bl)] (bl_plate) {};
+\node[anchor=south west,inner sep=3pt] at (bl_plate.south west) {\small $i \in 2N-3$};
+\draw [taro] (rate_bl) -- (bl);
+\draw [taro] (N) -- (tau);
+\draw [dtaro] (tau) -- (psi);
+\draw [dtaro] (bl) -- (psi);
+\draw [taro] (Q) -- (x);
+\draw [taro] (psi) -- (x);
+\node (a1) at (4,0.25) { };
+\node (a2) at (4,7.0) { };
+\node (a3) at (13.0,2.75) { };
+\node[rectangle, very thick, inner sep=6mm, fill=shc, fit = (a1) (a2) (a3)] (console) {};
+\node (l1) at (4,5.95) [right]{\tt for (I in 1:n\_branches) \{};
+\node (l1) at (5.5,5.6) [right]{\tt bl[I] $\sim$ dnExponential(10.0)};
+\node (l1) at (4,5.25) [right]{\tt \}};
+\node (l1) at (4,4.9) [right]{\tt topology $\sim$ dnUniformTopology(taxa)};
+\node (l2) at (4,4.55) [right]{\tt psi := treeAssembly(topology, bl)};
+\node (l8) at (4,3.5) [right]{\tt Q\_morpho <- fnJC(2) };
+\node (l9) at (4,2.6) [right]{\tt phyMorpho $\sim$ dnPhyloCTMC( tree=psi, };
+\node (l9) at (4,2.2) [right]{\tt siteRates=rates\_morpho, Q=Q\_morpho, };
+\node (l10) at (4,1.8) [right]{\tt type="Standard") };
+\node (l10) at (4,1.2) [right]{\tt phyMorpho.clamp( data ) };
+\end{tikzpicture}\\]
+\end{document}
