update (minor) to archery

--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
@@ -134,7 +134,7 @@ Name the script file \cl{my\_archery\_MH.Rev} or anything you'd like.
 \end{framed}}
 
 \subsection{The Metropolis-Hastings Algorithm}\label{sect:MH_algorithm}
-Though \RevBayes implements efficient and easy-to-use Markov chain Monte Carlo algorithms, we'll begin by writing one ourselves to gain a better understanding of the moving parts.
+Though \RevBayes implements efficient and easy-to-use Markov chain Monte Carlo (MCMC) algorithms, we'll begin by writing one ourselves to gain a better understanding of the moving parts.
 The Metropolis-Hastings MCMC algorithm \citep{Metropolis1953,Hastings1970} proceeds as follows:
 
 \begin{enumerate}
